syntax = "proto3";

option go_package = "github.com/darcys22/godbledger/proto/transaction";

package transaction;

service Transactor {
  rpc AddTransaction(TransactionRequest) returns (TransactionResponse) {}
  rpc DeleteTransaction(DeleteRequest) returns (TransactionResponse) {}
  rpc VoidTransaction(DeleteRequest) returns (TransactionResponse) {}
  rpc NodeVersion(VersionRequest) returns (VersionResponse) {}
  rpc AddTag(AccountTagRequest) returns (TransactionResponse) {}
  rpc DeleteTag(DeleteAccountTagRequest) returns (TransactionResponse) {}
  rpc AddCurrency(CurrencyRequest) returns (TransactionResponse) {}
  rpc DeleteCurrency(DeleteCurrencyRequest) returns (TransactionResponse) {}
  rpc GetTB(TBRequest) returns (TBResponse) {}
  rpc GetListing(ReportRequest) returns (ListingResponse) {}
  rpc AddAccount(AccountTagRequest) returns (TransactionResponse) {}
  rpc DeleteAccount(DeleteAccountTagRequest) returns (TransactionResponse) {}
  rpc ReconcileTransactions(ReconciliationRequest) returns (TransactionResponse) {}
  rpc AddTransactionFeedAccount(TransactionFeedAccountRequest) returns (TransactionResponse) {}
  rpc AddTransactionFeed(TransactionFeedRequest) returns (TransactionResponse) {}
}

message LineItem {
  string accountname = 1;
  string description = 2;
  string currency = 3;
  int64 amount = 4;
}

message Transaction {
    string date = 1;
    string description = 2;
    repeated LineItem lines = 3;
}

message TransactionRequest {
    string date = 1;
    string description = 2;
    repeated LineItem lines = 3;
}

message DeleteRequest {
    string identifier = 1;
}

message TransactionResponse {
    string message = 1;
}

message AccountTagRequest {
    string account = 1;
    repeated string tag = 2;
}

message DeleteAccountTagRequest {
    string account = 1;
    repeated string tag = 2;
}

message CurrencyRequest {
    string currency = 1;
    int64 decimals = 2;
}

message DeleteCurrencyRequest {
    string currency = 1;
}

message TransactionFeedAccountRequest {
  string name = 1;
  string currency = 2;
}

message TransactionFeedLine {
  string date = 1;
  string hash = 2;
  int64 amount = 3;
  string description = 4;
}

message TransactionFeedRequest {
    string account = 1;
    repeated TransactionFeedLine lines = 2;
}

message TBLine {
  string accountname = 1;
  repeated string tags = 2;
  int64 amount = 3;
  string currency = 4;
  int64 decimals = 5;
  string amountStr = 6;
}

message TBRequest {
    string date = 1;
}
message ReportRequest {
    string date = 1;
    string startdate = 2;
}

message TBResponse {
    repeated TBLine lines = 1;
}

message ListingResponse {
    repeated Transaction transactions = 1;
}

message ReconciliationRequest {
    repeated string splitID = 1;
}

message VersionRequest {
    string message = 1;
}

message VersionResponse {
    string message = 1;
}
